fix x overflow

--- a/responsive-web-design/survey-page/survey.css
+++ b/responsive-web-design/survey-page/survey.css
@@ -113,16 +113,17 @@ footer {
     margin-left: auto;
     margin-right: auto;
 }
-.smartbreak {
-    display: hide;
-}
-@media (max-width: 1000px)
+
+@media (max-width: 900px)
 {
     .spacer {
-        padding-left: 200px;
+        padding-left: 150px;
+    }
+    body {
+        overflow-x: hidden;
     }
 }
-@media (max-height: 800px)
+@media (max-height: 900px)
 {
     header {
         position: relative;
